--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
-	<body class='overflow-y-scroll bg-bgcolour'>
+	<body class='bg-bgcolour'>
 		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
